# cuyamaca

./: BUGS.md  CLAUDE.md  README.md  index.html  package-lock.json  package.json  runtime.html  vite.config.ts
.claude/: SKILL-SCAFFOLD-ORDER.md  settings.local.json
.claude/skills/cuyamaca-arduino-flash/: SKILL.md
.claude/skills/cuyamaca-code-generation/: SKILL.md
.github/workflows/: release.yml
src/: App.tsx  main.tsx  runtime.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/prompts/: chat.md  generate.md  review.md  runtime.md
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: codegen.rs  debug.rs  flash.rs  mod.rs  models.rs  projects.rs  runtime.rs  serial.rs  setup.rs
src-tauri/src/models/: component_library.rs  manifest.rs  mod.rs  project.rs  tools.rs
src-tauri/src/services/: agent.rs  anthropic.rs  arduino.rs  camera.rs  code_gen.rs  context.rs  dependency.rs  google.rs  keystore.rs  mistral.rs  mod.rs  model_manager.rs  ollama.rs  openai.rs  process_manager.rs  provider.rs  sensor_state.rs  sensor_viz.rs  serial.rs  tool_dispatch.rs
src/commands/: codegen.ts  flash.ts  index.ts  models.ts  projects.ts  runtime.ts  serial.ts  setup.ts
src/components/: ComponentPicker.tsx  DependencyRow.tsx  GlassPanel.tsx  PartsPanel.tsx  RuntimeChat.tsx  SensorStatePanel.tsx  SensorVizPanel.tsx  SerialMonitor.tsx  Sidebar.tsx  StatusDot.tsx
src/styles/: globals.css
src/types/: manifest.ts
src/views/: ChatView.tsx  CodeView.tsx  ManifestView.tsx  RuntimeView.tsx  SettingsView.tsx  SetupWizard.tsx
(+9 files in other folders)
