[package]
name = "cuyamaca"
version = "0.1.0"
description = "Natural language control for Arduino robotics"
authors = ["you"]
edition = "2021"

[lib]
name = "cuyamaca_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
keyring = "3"
serialport = "4"
dirs = "6"
similar = "2"
image = "0.25"
base64 = "0.22"

